--- a/resources/main.css
+++ b/resources/main.css
@@ -1,13 +1,31 @@
 * {box-sizing: border-box;}
+
 html, body {width:100%;
 height:100%;
 margin:0;
 padding:0}
-.container {width:100%;
-    height:100%;
+
+.container-fluid{
     margin:0;
-    padding:0}
+    padding:0 30px}
+
 form input {margin-bottom: 20px;}
-.expense {width:50%;
-display:flex;
-justify-content: space-around;}
+
+.list{width:100%;
+margin-top:30px;
+display: flex;
+flex-direction: column;
+align-content: center;}
+
+ul li {width:100%;
+       height:25px;
+       border-bottom: 1px solid grey;;
+       text-decoration: none;
+       display: flex;
+       justify-content: space-between;
+       margin-bottom:10px;}
+
+ul i {width:30px;
+      color:red;
+    cursor: pointer;}
+
