--- a/resources/main.css
+++ b/resources/main.css
@@ -11,6 +11,8 @@ padding:0}
 
 form input {margin-bottom: 20px;}
 
+#addIncome {margin-bottom:20px}
+
 .list{width:100%;
 margin-top:30px;
 display: flex;
